# UI-Capture-Sysyem

./: .coverage  .env  README.md  bootstrap_install.py  pyproject.toml  requirements.txt  setup.py
datasets/: README.md  index.json  summary.json
datasets/github.com/create_repository/2025-10-30_17-10-56/: manifest.json
datasets/github.com/create_repository/2025-10-30_17-16-24/: manifest.json
datasets/github.com/create_repository/2025-10-30_17-22-36/: manifest.json
datasets/linear.app/create_issue/2025-10-30_18-27-03/: 00_my_issues.png.json  01_modal_open.png.json  02_title_typed.png.json  03_description_typed.png.json  04_after_submit.png.json  captures.jsonl  manifest.json  metadata.json
datasets/www.notion.so/create_database/2025-10-30_17-04-51/: manifest.json
scripts/: analyze_dataset.py  generate_index.py  setup_auth.py  validate_workflows.py
src/: __init__.py  cli.py
src/capture/: __init__.py  metadata.py  optimizer.py  screenshot.py
src/core/: __init__.py  actions.py  engine.py  engine.py.bak  workflow_loader.py
src/detection/: __init__.py  animation_detector.py  modal_detector.py  overlay_detector.py  stability.py
src/selectors/: __init__.py  locator.py  strategy.py
src/utils/: config.py  logger.py  timing.py
storage_state/: README.md  github.com.json  linear.app.json  www.notion.so.json
tests/unit/: test_cli_commands.py  test_workflow_loader_multidoc.py
workflows/github.com/: create_repository.yaml
workflows/linear.app/: create_issue.yaml  create_project.yaml  filter_issues.yaml
workflows/www.notion.so/: create_database.yaml  filter_database.yaml
